fix cassandra tests
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>